# engine-2021

./: .gitignore  README.md  config.py  engine.py
cpp_skeleton/: commands.json  main.cpp  makefile  player.cpp  player.hpp
cpp_skeleton/libs/skeleton/: CMakeLists.txt
cpp_skeleton/libs/skeleton/include/skeleton/: actions.h  constants.h  game.h  runner.h  states.h
cpp_skeleton/libs/skeleton/src/: actions.cpp  states.cpp
cpp_skeleton/skeleton/: actions.cpp  actions.hpp  bot.hpp  runner.cpp  runner.hpp  states.cpp  states.hpp
cpp_skeleton/src/: main.cpp
java_skeleton/javabot/: Player.java
java_skeleton/javabot/skeleton/: Action.java  ActionType.java  BoardState.java  Bot.java  GameState.java  RoundState.java  Runner.java  State.java
python_skeleton/: player.py
python_skeleton/skeleton/: actions.py  bot.py  runner.py  states.py
